Implememts of Controllers , Models , Repos

--- a/RodriguezJ_MiPrimeraAPI/appsettings.json
+++ b/RodriguezJ_MiPrimeraAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RodriguezJ_MiPrimeraAPIContext": "Server=(localdb)\\mssqllocaldb;Database=RodriguezJ_MiPrimeraAPIContext-efd71731-06c0-4634-80de-0716b2253e21;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
